Style: make sure visibility icons are always visible in scene tree

--- a/bin/style.less
+++ b/bin/style.less
@@ -235,6 +235,10 @@ input[type=checkbox] {
 
 .hide-scene-tree {
 	height: 100%;
+
+	.jstree-container-ul {
+		max-width: 300px;
+	}
 }
 
 .hide-tileselect {
